Added Euler problems to projects
Added Euler problems to projects
Edited references & formatting

--- a/Eva_Biedron_Resume_2023_Complete.tex
+++ b/Eva_Biedron_Resume_2023_Complete.tex
@@ -65,8 +65,8 @@
 	\end{rSection}
 
 	\begin{rSection}{Projects}
-		\href{https://github.com/Eva-Biedron/EVAbase}{\bf EVAbase: an SQLite database for my mineral and fossil collection} \hfill {\em Ongoing}
-		\\
+		\href{https://github.com/Eva-Biedron/EVAbase}{{\bf EVAbase:} an SQLite database for my mineral and fossil collection} \hfill {\em Ongoing}	\\
+		\href{https://github.com/Eva-Biedron/ProjectEuler}{{\bf Project Euler:} solving mathematical/computer programming problems in Python and R} \hfill {\em 2022}	\\
 		\\
 		\\
 	\end{rSection}
@@ -141,10 +141,14 @@
 
 	\begin{rSection}{References}
 		\normalsize Jessica Cundiff \\
-		\small Curatorial Associate, Invertebrate Paleontology, Museum of Comparative Zoology \\
+		\small Curatorial Associate \\
+		Invertebrate Paleontology \\
+		Museum of Comparative Zoology \\
 		
 		\normalsize Scott Johnston \\
-		\small Preparator \& Technician, Vertebrate Paleontology, Museum of Comparative Zoology \\
+		\small Preparator \& Technician \\
+		Vertebrate Paleontology \\
+		Museum of Comparative Zoology \\
 		
 		Contact information available upon request.
 	\end{rSection}	
